# file_finder

./: README.md  finder.py  pyproject.toml  reqs  utils.py
finder1/: exceptions.py  finder.py  pyvenv.cfg  utils.py
finder1/Scripts/: activate  activate.bat
